PixelApp Library.json

--- a/PixelApp Library.json
+++ b/PixelApp Library.json
@@ -16,7 +16,7 @@
     {
       "name": "Flero",
       "bundleIdentifier": "com.sp67.flero",
-      "marketplaceID": "",
+      "marketplaceID": "71924512",
       "developerName": "speedy67",
       "subtitle": "A GD iOS mod menu for free!",
       "localizedDescription": "Another GD iOS mod menu similar to iCreate Pro. With similar features, all for free!",
@@ -55,7 +55,7 @@
     {
       "name": "Youtube++",
       "bundleIdentifier": "com.google.ios.youtubeplus",
-      "marketplaceID": "",
+      "marketplaceID": "81239743",
       "developerName": "PixelatedDoesGaming",
       "subtitle": "YouTube? No. YouTube++? Yes!",
       "localizedDescription": "This is a youtube tweak built and compiled by me from dayanch96’s Youtube Plus/YouTube Lite source. Many features are available here like no ads, no promos, etc.",
@@ -112,7 +112,7 @@
     {
       "name": "iCreate Pro",
       "bundleIdentifier": "com.camila314.icreate",
-      "marketplaceID": "",
+      "marketplaceID": "23480231",
       "developerName": "camila314",
       "subtitle": "An awesome GD iOS mod menu.",
       "localizedDescription": "This is iCreate Pro, one of the best GD iOS mod menus! There are loads of features here to try out that aren’t in the normal version of GD iOS. Some features are noclip hack, texture pack support, unlock all icons, editor hacks, and more! So what are you waiting for? Download iCreate and enjoy everything here.",
